force-app/main/default/objects/Pedido__c/Pedido__c.object-meta.xml
<CustomObject>
    <description>Objeto que almacena los registros de pedidos del restaurante (registra lo que el cliente desea en la mesa)</description>
    <label>Pedido</label>
    <nameField>
        <displayFormat>O-{00000000}</displayFormat>
        <label>Código de Pedido</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pedidos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>