force-app/main/default/objects/Pedido__c/fields/Estado_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_pago__c</fullName>
    <label>Estado de pago</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Pagado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>