force-app/main/default/objects/Pedido__c/fields/Estado_del_pedido__c.field-meta.xml
<CustomField>
    <fullName>Estado_del_pedido__c</fullName>
    <label>Estado del pedido</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>En Preparación</fullName>
            </value>
            <value>
                <fullName>Listo</fullName>
            </value>
            <value>
                <fullName>Entregado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>