force-app/main/default/objects/Pedido__c/fields/Fecha_Hora_del_pedido__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Hora_del_pedido__c</fullName>
    <label>Fecha/Hora del pedido</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>