force-app/main/default/objects/Pedido__c/fields/Mesa__c.field-meta.xml
<CustomField>
    <fullName>Mesa__c</fullName>
    <label>Número de mesa</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>