force-app/main/default/objects/Pedido__c/fields/Metodo_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Metodo_de_pago__c</fullName>
    <label>Método de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Efectivo</fullName>
            </value>
            <value>
                <fullName>DeUna</fullName>
            </value>
            <value>
                <fullName>Transferencia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>