force-app/main/default/objects/Pedido__c/fields/Total_pedido__c.field-meta.xml
<CustomField>
    <fullName>Total_pedido__c</fullName>
    <label>Total pedido</label>
    <summarizedField>Detalle_del_pedido__c.Total_item__c</summarizedField>
    <summaryForeignKey>Detalle_del_pedido__c.Pedido__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>