force-app/main/default/objects/Pedido__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mesa__c</columns>
    <columns>Fecha_Hora_del_pedido__c</columns>
    <columns>Estado_del_pedido__c</columns>
    <columns>Estado_de_pago__c</columns>
    <columns>Metodo_de_pago__c</columns>
    <columns>Total_pedido__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>